Bug 405037 - New vector shapes are not filled with correctly after pattern change
Summary: New vector shapes are not filled with correctly after pattern change
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Vector (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-03 15:25 UTC by Anna Medonosova
Modified: 2019-03-03 15:26 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Anna Medonosova 2019-03-03 15:25:21 UTC
If a vector shape is created with fill set to pattern

1. Select Rectangle Tool (or Ellipse, ...). In the tool options set fill to pattern.
2. Change the pattern in patterns docker.
3. Draw the shape.

The shape is filled with a gradient instead of current pattern from resource manager. There is a null pointer KisTool's d->currentPattern.
Comment 1 Anna Medonosova 2019-03-03 15:26:36 UTC
Git commit 7b4550bd4600dec9a108737bd027693cbe942145 by Anna Medonosova.
Committed on 03/03/2019 at 15:14.
Pushed by amedonosova into branch 'master'.

Fix creating vector shapes with pattern fill

M  +1    -1    libs/ui/tool/kis_tool.cc

https://commits.kde.org/krita/7b4550bd4600dec9a108737bd027693cbe942145