Fix creating vector shapes with pattern fill

BUG: 405037